# lipfd

./: Dockerfile  README.md  compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
src/: milestone_1.md  preprocess.py  train.py  train_ddp.py  upload.py
src/checkpoints/experiment_name/: opt.txt
src/data/: __init__.py  dataset.py  datasets.py
src/models/: __init__.py  clip_models.py
src/options/: base_options.py  train_options.py
src/trainer/: trainer.py  trainer_ddp.py
