[tool.poetry]
name = "lipfd"
version = "0.1.0"
description = ""
authors = ["Martin Kalema <kalema.martin@aibos2100.onmicrosoft.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
ftfy = "6.1.1"
librosa = "0.10.1"
matplotlib = "3.8.0"
numpy = "1.26.0"
opencv-contrib-python = "4.8.1.78"
opencv-python = "4.8.1.78"
scikit-learn = "1.3.1"
tqdm = "4.66.1"
ipykernel = "^6.29.5"
protobuf = "3.20.*"
retina-face = "^0.0.17"
tensorflow = {version = "^2.18.0", extras = ["and-cuda"]}
tf-keras = "^2.18.0"
torch = "2.1.0"
torchvision = "0.16.0"
moviepy = "^2.1.1"
pydub = "^0.25.1"
jupyterlab = "^4.3.1"
nbconvert = "^7.16.4"
wandb = "^0.19.1"
gdown = "^5.2.0"
regex = "^2024.11.6"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
ruff = "^0.4.8"
mypy = "^1.10.0"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
poethepoet = "^0.26.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py310']
line-length = 119

[tool.isort]
profile = "black"
py_version = 312
line_length = 119

[tool.ruff]
target-version = "py310"
line-length = 119
select = ["ALL"]
ignore = ["ANN", "D", "TD", "DTZ","COM","EM","FBT", "INP", "ERA", "E501","N802", "N806", "S101", "S311", "S324", "RUF001", "RUF002", "RUF003"]
exclude = ["/workspace/src/libs"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = false
strict = true
plugins = [
  "numpy.typing.mypy_plugin"
]

[tool.poe.tasks]
lint = "ruff check ."
lint-fix = "ruff check . --fix"
fmt = "black ."
isort = "isort ."
test = "pytest --cov=src/services -sv --disable-warnings tests/integration"
fmt-test = ["fmt", "isort", "test"]
fmt-test-lint = ["fmt", "isort", "lint", "test"]